Update contact info: change website to egrams.co and email to contact@egrams.co

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="icon_wrapper"><div class="icon-dot"></div></div>
                             <div class="button_text">Partners</div>
                         </a> -->
-                        <a href="https://whiteneuron.com" class="contact-us-button">Contact Us</a>
+                        <a href="https://egrams.co" class="contact-us-button">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -687,7 +687,7 @@
                     <div>LK333 DV08 Dia Lao Area, Mau Luong Urban Area, Kien Hung Ward, Hanoi, Vietnam</div>
                 </div>
                 <div style="margin-top: 1.25rem; display: flex; gap: 1rem; flex-wrap: wrap; align-items:center;">
-                    <a href="mailto:contact@whiteneurons.com" style="color: #ff8c42; text-decoration: none;">contact@whiteneurons.com</a>
+                    <a href="mailto:contact@egrams.co" style="color: #ff8c42; text-decoration: none;">contact@egrams.co</a>
                     <span style="opacity:.5;">|</span>
                     <a href="tel:+840339802255" style="color: #ff8c42; text-decoration: none;">+84 033 980 2255</a>
                 </div>
@@ -717,12 +717,12 @@
                         <div class="uui-footer01_link-list-heading">Resources</div>
                         <a href="https://www.youtube.com/embed/CrtB-Tb-J_o?rel=0&modestbranding=1" class="uui-footer01_link">Video Demo</a>
                         <!-- <a href="../docs/broucher-eeg.pdf" class="uui-footer01_link" target="_blank" rel="noopener">Product Brochure</a> -->
-                        <a href="https://whiteneuron.com" class="uui-footer01_link" target="_blank" rel="noopener">Testimonials</a>
-                        <a href="https://whiteneuron.com" class="uui-footer01_link" target="_blank" rel="noopener">Company Site</a>
+                        <a href="https://egrams.co" class="uui-footer01_link" target="_blank" rel="noopener">Testimonials</a>
+                        <a href="https://egrams.co" class="uui-footer01_link" target="_blank" rel="noopener">Company Site</a>
                     </div>
                     <div class="uui-footer01_link-list">
                         <div class="uui-footer01_link-list-heading">Contact</div>
-                        <a href="mailto:contact@whiteneurons.com" class="uui-footer01_link">Email Us</a>
+                        <a href="mailto:contact@egrams.co" class="uui-footer01_link">Email Us</a>
                         <a href="tel:+840339802255" class="uui-footer01_link">Call: +84 033 980 2255</a>
                         <a href="https://maps.app.goo.gl/g1hzcexctadfBBtR6" target="_blank" rel="noopener" class="uui-footer01_link">Find us on Maps</a>
                         <a href="https://www.linkedin.com/company/whiteneuron" target="_blank" rel="noopener" class="uui-footer01_link">LinkedIn</a>
