--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                 <div style="margin-top: 1.25rem; display: flex; gap: 1rem; flex-wrap: wrap; align-items:center;">
                     <a href="mailto:contact@egrams.co" style="color: #ff8c42; text-decoration: none;">contact@egrams.co</a>
                     <span style="opacity:.5;">|</span>
-                    <a href="tel:+840339802255" style="color: #ff8c42; text-decoration: none;">+84 033 980 2255</a>
+                    <a href="tel:+84339802255" style="color: #ff8c42; text-decoration: none;">+84 33 980 2255</a>
                 </div>
                 <div style="margin-top: 1rem; display:flex; gap:.75rem; align-items:center;">
                     <a href="https://www.linkedin.com/company/whiteneuron" target="_blank" rel="noopener" aria-label="LinkedIn" style="color:#fff; opacity:.8;">
@@ -698,7 +698,7 @@
                     <a href="https://x.com/whiteneuron" target="_blank" rel="noopener" aria-label="X" style="color:#fff; opacity:.8;">
                         <i class="fa-brands fa-x-twitter"></i>
                     </a>
-                    <a href="https://github.com/tanhtm" target="_blank" rel="noopener" aria-label="GitHub" style="color:#fff; opacity:.8;">
+                    <a href="https://github.com/egrams-ai" target="_blank" rel="noopener" aria-label="GitHub" style="color:#fff; opacity:.8;">
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </div>
@@ -723,7 +723,7 @@
                     <div class="uui-footer01_link-list">
                         <div class="uui-footer01_link-list-heading">Contact</div>
                         <a href="mailto:contact@egrams.co" class="uui-footer01_link">Email Us</a>
-                        <a href="tel:+840339802255" class="uui-footer01_link">Call: +84 033 980 2255</a>
+                        <a href="tel:+84339802255" class="uui-footer01_link">Call: +84 33 980 2255</a>
                         <a href="https://maps.app.goo.gl/g1hzcexctadfBBtR6" target="_blank" rel="noopener" class="uui-footer01_link">Find us on Maps</a>
                         <a href="https://www.linkedin.com/company/whiteneuron" target="_blank" rel="noopener" class="uui-footer01_link">LinkedIn</a>
                     </div>
