Update index.html and translations.js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>egrams - Egram Co., Ltd AI EEG Platform</title>
+    <title>EEG CDSS - Egram Co., Ltd AI EEG Platform</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="image/egrams-logo-nbg.png">
@@ -33,7 +33,7 @@
             <div class="mil-pos-abs mil-animation-2">
                 <div class="mil-reveal-frame">
                     <p class="mil-reveal-box"></p>
-                    <p class="mil-h3 mil-muted mil-thin" data-i18n="preloader.egrams">egrams</p>
+                    <p class="mil-h3 mil-muted mil-thin" data-i18n="preloader.egrams">EEG CDSS</p>
                 </div>
             </div>
         </div>
@@ -323,10 +323,10 @@
                 <section class="fade-in-section">
                     <div class="feature-grid">
                         <div class="hero-left-container">
-                            <h2 class="heading-2 blue" data-i18n="about.title">About egrams</h2>
+                            <h2 class="heading-2 blue" data-i18n="about.title">About EEG CDSS</h2>
                             <div class="space-small"></div>
                             <div class="text-body right" data-i18n="about.text">
-                                egrams by Egram Co., Ltd is an AI EEG platform that streamlines the entire clinical EEG
+                                EEG CDSS by Egram Co., Ltd is an AI EEG platform that streamlines the entire clinical EEG
                                 workflow — from signal processing to automated, editable reporting — designed to
                                 integrate securely with hospital HIS/PACS and DICOM.
                                 We work with clinicians to deliver faster, more reliable insights for better patient
@@ -345,7 +345,7 @@
                             </a>
                         </div>
                         <div class="hero-gif">
-                            <img src="image/Picture5.png" alt="About egrams" loading="lazy">
+                            <img src="image/Picture5.png" alt="About EEG CDSS" loading="lazy">
                             <p class="image-caption" data-i18n="about.caption">Built for clinicians: interoperable,
                                 secure, and clinically validated EEG AI platform.</p>
                         </div>
@@ -674,7 +674,7 @@
                                 </div>
                             </div>
                             <div class="testimonial-content">
-                                <p data-i18n="feedback.t2.text">"The right UX is key! Love how egrams has adapted
+                                <p data-i18n="feedback.t2.text">"The right UX is key! Love how EEG CDSS has adapted
                                     advanced AI interface to maximize utility and efficiency in clinical EEG analysis
                                     workflows."</p>
                             </div>
@@ -705,7 +705,7 @@
                             </div>
                             <div class="testimonial-content">
                                 <p data-i18n="feedback.t3.text">"Software is eating the world but it still can't see it.
-                                    egrams is the vision layer for medical software—one that is loved by healthcare
+                                    EEG CDSS is the vision layer for medical software—one that is loved by healthcare
                                     professionals!"</p>
                             </div>
                         </div>
@@ -731,7 +731,7 @@
                                 </div>
                             </div>
                             <div class="testimonial-content" data-i18n="feedback.t4.text">
-                                <p>"A lot of people have noted a gap between what AI seems capable of doing in demos and what they're able to get in real-world settings. egrams bridges that gap for medical professionals."</p>
+                                <p>"A lot of people have noted a gap between what AI seems capable of doing in demos and what they're able to get in real-world settings. EEG CDSS bridges that gap for medical professionals."</p>
                             </div>
                         </div>
 
@@ -756,7 +756,7 @@
                                 </div>
                             </div>
                             <div class="testimonial-content">
-                                <p data-i18n="feedback.t5.text">"egrams platform is such a resource-intense place to learn AI for medical applications. For people who want to get more in-depth into computer vision and do hands-on work, this is the solution."</p>
+                                <p data-i18n="feedback.t5.text">"EEG CDSS platform is such a resource-intense place to learn AI for medical applications. For people who want to get more in-depth into computer vision and do hands-on work, this is the solution."</p>
                             </div>
                         </div>
 
@@ -781,7 +781,7 @@
                                 </div>
                             </div>
                             <div class="testimonial-content">
-                                <p data-i18n="feedback.t6.text">"Technological advances are essential for healthcare to maintain its leadership. egrams is helping us immediately realize value from state-of-the-art computer vision technology in medical applications."</p>
+                                <p data-i18n="feedback.t6.text">"Technological advances are essential for healthcare to maintain its leadership. EEG CDSS is helping us immediately realize value from state-of-the-art computer vision technology in medical applications."</p>
                             </div>
                         </div>
                     </div>
@@ -795,7 +795,7 @@
     <footer>
         <div class="uui-footer01_top-wrapper">
             <div class="uui-footer01_left-wrapper">
-                <h3 style="font-size: 1.5rem; margin-bottom: 1rem;">egrams</h3>
+                <h3 style="font-size: 1.5rem; margin-bottom: 1rem;">EEG CDSS</h3>
                 <p style="color: #999;" data-i18n="footer.desc">Advancing brain research through AI and neuroscience</p>
                 <div style="margin-top: 1rem; color: #bbb; line-height: 1.6;">
                     <div data-i18n="footer.company">Egram Co., Ltd</div>
@@ -845,7 +845,7 @@
             </div>
         </div>
         <div class="uui-footer01_bottom-wrapper" data-i18n="footer.rights">
-            © 2025 egrams Egram Co., Ltd. All rights reserved.
+            © 2025 EEG CDSS Egram Co., Ltd. All rights reserved.
         </div>
     </footer>
 
