Update index.html and translations.js

--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
             </div>
         </div>
         <div class="uui-footer01_bottom-wrapper" data-i18n="footer.rights">
-            © 2025 EEG CDSS Egram Co., Ltd. All rights reserved.
+            © 2025 EEG CDSS | Egram Co., Ltd. All rights reserved.
         </div>
     </footer>
 
