add multi video

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <div class="icon_wrapper"><div class="icon-dot"></div></div>
                             <div class="button_text">Partners</div>
                         </a> -->
-                        <a href="https://egrams.co" class="contact-us-button" data-i18n="nav.contact">Contact Us</a>
+                        <a href="mailto:contact@egrams.co" class="contact-us-button" data-i18n="nav.contact">Contact Us</a>
                         <a href="#" id="langToggle" class="lang-toggle" aria-label="Switch language">
                             <span class="lang-flag" id="langFlag">
                                 <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
